--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "dnadesign/silverstripe-elemental-virtual",
     "description": "Adds ability for Elemental to share content blocks between pages",
-    "type": "silverstripe-module",
+    "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
         "element",
@@ -12,7 +12,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "dnadesign/silverstripe-elemental": "2.x-dev"
+        "dnadesign/silverstripe-elemental": "2.x-dev",
+        "silverstripe/vendor-plugin": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
@@ -22,7 +23,11 @@
         "installer-name": "elemental-virtual",
         "branch-alias": {
             "dev-master": "1.x-dev"
-        }
+        },
+        "expose": [
+            "css",
+            "images"
+        ]
     },
     "autoload": {
         "psr-4": {
