--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -4,10 +4,10 @@ After: 'elemental'
 ---
 DNADesign\Elemental\Models\BaseElement:
   extensions:
-    - SilverStripe\Elemental\Virtual\Extensions\BaseElementExtension
+    - SilverStripe\ElementalVirtual\Extensions\BaseElementExtension
 DNADesign\Elemental\ElementalEditor:
   extensions:
-    - SilverStripe\Elemental\Virtual\Extensions\ElementalEditorExtension
+    - SilverStripe\ElementalVirtual\Extensions\ElementalEditorExtension
 SilverStripe\Admin\LeftAndMain:
   extra_requirements_css:
     - 'silverstripe/elemental-virtual:css/elemental-admin.css'
