Require stable version of silverstripe-elemental module

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "dnadesign/silverstripe-elemental": "2.x-dev",
+        "dnadesign/silverstripe-elemental": "^2.0",
         "silverstripe/vendor-plugin": "^1.0"
     },
     "require-dev": {
