update loading of requirements - as per https://github.com/dnadesign/silverstripe-elemental-virtual/issues/13 update block icon - as per https://github.com/dnadesign/silverstripe-elemental-virtual/issues/14

--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -9,5 +9,5 @@ DNADesign\Elemental\ElementalEditor:
   extensions:
     - DNADesign\ElementalVirtual\Extensions\ElementalEditorExtension
 SilverStripe\Admin\LeftAndMain:
-  extra_requirements_css:
-    - 'dnadesign/silverstripe-elemental-virtual:css/elemental-admin.css'
+  extensions:
+    - DNADesign\ElementalVirtual\Extensions\LeftAndMainExtension
