--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "dnadesign/silverstripe-elemental": "^3",
+        "dnadesign/silverstripe-elemental": ">=3",
         "silverstripe/vendor-plugin": "^1.0"
     },
     "require-dev": {
