--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "dnadesign/silverstripe-elemental": "^3 || ^4",
         "tractorcow/silverstripe-autocomplete": "^4",
-        "silverstripe/vendor-plugin": "^1.0"
+        "silverstripe/vendor-plugin": "^1.0",
+        "silverstripe/admin": "^1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
@@ -25,8 +26,7 @@
             "dev-master": "1.x-dev"
         },
         "expose": [
-            "css",
-            "images"
+            "css"
         ]
     },
     "scripts": {
