--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "dnadesign/silverstripe-elemental": "^3 || ^4",
-        "tractorcow/silverstripe-autocomplete": "^4",
-        "silverstripe/vendor-plugin": "^1.0",
-        "silverstripe/admin": "^1.5"
+        "php": "^8.1",
+        "dnadesign/silverstripe-elemental": "^5",
+        "tractorcow/silverstripe-autocomplete": "^5",
+        "silverstripe/admin": "^2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "silverstripe/recipe-testing": "^3",
         "squizlabs/php_codesniffer": "^3.0"
     },
     "extra": {
