--- a/composer.json
+++ b/composer.json
@@ -13,32 +13,37 @@
     "prefer-stable": true,
     "require": {
         "dnadesign/silverstripe-elemental": "^3 || ^4",
-        "tractorcow/silverstripe-autocomplete": "^4",
+        "silverstripe/tagfield": "^2.0",
         "silverstripe/vendor-plugin": "^1.0",
         "silverstripe/admin": "^1.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "^3.0"
+        "silverstripe/recipe-testing": "^2"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-main": "1.x-dev"
         },
         "expose": [
             "css"
+        ],
+        "project-files-installed": [
+            "behat.yml",
+            "phpcs.xml.dist",
+            "phpunit.xml.dist"
         ]
-    },
-    "scripts": {
-        "lint": "phpcs --extensions=php src/ tests/",
-        "syntax-check": "find src/ tests/ -type f -name '*.php' -exec php -l {} \\;",
-        "lint-clean": "phpcbf src/ tests/ --extensions=php",
-        "remove-uses": "php-cs-fixer fix src/ tests/ --rules=no_unused_imports"
     },
     "autoload": {
         "psr-4": {
             "DNADesign\\ElementalVirtual\\": "src/",
             "DNADesign\\ElementalVirtual\\Tests\\": "tests/php/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/recipe-plugin": true,
+            "silverstripe/vendor-plugin": true
         }
     }
 }
