--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "require": {
         "php": "^8.1",
         "dnadesign/silverstripe-elemental": "^5",
-        "tractorcow/silverstripe-autocomplete": "^5",
-        "silverstripe/admin": "^2"
+        "silverstripe/tagfield": "^3"
     },
     "require-dev": {
         "silverstripe/recipe-testing": "^3",
