--- a/tests/php/BaseElementExtensionTest.yml
+++ b/tests/php/BaseElementExtensionTest.yml
@@ -2,17 +2,17 @@ DNADesign\Elemental\Models\ElementalArea:
   area1:
     Title: Test Area
 
-DNADesign\Elemental\Tests\Src\TestPage:
+DNADesign\ElementalVirtual\Tests\Src\TestPage:
   page1:
     Title: Page 1
     URLSegment: test-page
     ElementalAreaID: =>DNADesign\Elemental\Models\ElementalArea.area1
 
-DNADesign\Elemental\Tests\Src\TestElement:
+DNADesign\ElementalVirtual\Tests\Src\TestElement:
   element1:
     Title: Element 1
     ParentID: =>DNADesign\Elemental\Models\ElementalArea.area1
 
 DNADesign\ElementalVirtual\Model\ElementVirtual:
   virtual1:
-    LinkedElementID: =>DNADesign\Elemental\Tests\Src\TestElement.element1
+    LinkedElementID: =>DNADesign\ElementalVirtual\Tests\Src\TestElement.element1
